<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:background="#FFFFBB56"

        android:contentDescription="@string/app_name"
        android:scaleType="center" />


    <EditText
        android:id="@+id/usuario"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/nombreUsuario" />

    <EditText
        android:id="@+id/contrasena"

        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/campoContraseña"
        android:inputType="textPassword" />
</LinearLayout>