<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pizarra"

    tools:context=".ActualizarEliminar">

    <EditText
        android:id="@+id/TextId"
        style="@style/editTexTBlanco"

        android:layout_width="319dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/nombreUsuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/TextNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <EditText
        android:id="@+id/TextApellido"
        style="@style/editTexTBlanco"
        android:layout_width="316dp"
        android:layout_height="58dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/campoApellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/TextContraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/TextContraseña"
        style="@style/editTexTBlanco"
        android:layout_width="322dp"
        app:passwordToggleEnabled="true"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/campoContraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.527"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/TextNombre"
        android:layout_width="317dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        style="@style/editTexTBlanco"
        android:hint="@string/campoNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/TextApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        style="@style/botones"
        android:text="@string/botonBorrar"
        app:layout_constraintBottom_toTopOf="@+id/botonRegresar"
        app:layout_constraintEnd_toStartOf="@+id/buttonActualizar"

        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextContraseña"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/botonRegresar"
        android:layout_width="324dp"
        android:layout_height="52dp"
        android:layout_marginBottom="80dp"
        android:text="@string/botonRegrasar"
        style="@style/botones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrate" />

    <Button
        android:id="@+id/buttonActualizar"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="84dp"
        style="@style/botones"
        android:text="@string/botonActualizar"
        app:layout_constraintBottom_toTopOf="@+id/botonRegresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextContraseña"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/editTexTBlanco"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textoModificarActualizar"
        app:layout_constraintBottom_toTopOf="@+id/TextId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        style="@style/editTexTBlanco"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camposActualizar"
        app:layout_constraintBottom_toTopOf="@+id/TextNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextId"
        app:layout_constraintVertical_bias="0.621" />

</androidx.constraintlayout.widget.ConstraintLayout>