<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pizarra"
    tools:context=".Registro">

    <EditText

        android:id="@+id/TextId"
        style="@style/editTexTBlanco"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/nombreUsuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/TextNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextApellido"
        style="@style/editTexTBlanco"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/campoApellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/TextContraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextNombre" />

    <Button
        android:id="@+id/botonRegresar"
        style="@style/botones"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:text="@string/botonRegrasar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrate" />

    <Button
        android:id="@+id/buttonRegistrate"
        style="@style/botones"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:text="@string/botonRegistrarte"
        app:layout_constraintBottom_toTopOf="@+id/botonRegresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextContraseña" />

    <EditText
        android:id="@+id/TextContraseña"
        style="@style/editTexTBlanco"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/campoContraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextApellido" />

    <EditText
        android:id="@+id/TextNombre"
        style="@style/editTexTBlanco"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/campoNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/TextApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextId" />

</androidx.constraintlayout.widget.ConstraintLayout>