<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pizarra"
    tools:context=".InsertarLibro">

    <EditText
        style="@style/editTexTBlanco"
        android:id="@+id/textLibro"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/campoNombreLibro"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <EditText
        style="@style/editTexTBlanco"
        android:id="@+id/textAutor"
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/campoNombreAutor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        style="@style/editTexTBlanco"
        android:id="@+id/textFecha"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/campoFechaLanzamiento"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/botonLibro"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonLibro"
        android:layout_width="361dp"
        android:layout_height="58dp"
        android:layout_marginTop="436dp"
        android:text="@string/botonAgregarLibro"
        style="@style/botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonRegresar2"
        android:layout_width="362dp"
        android:layout_height="62dp"
        android:text="@string/botonRegrasar"
        style="@style/botones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonLibro"
        app:layout_constraintVertical_bias="0.386" />

</androidx.constraintlayout.widget.ConstraintLayout>