<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pizarra"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:text="@string/botonRegistrarte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        style="@style/botones"/>

    <Button
        style="@style/botones"
        android:id="@+id/botonLogin"
        android:layout_width="216dp"
        android:layout_height="60dp"
        android:text="@string/botonLogin"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/botonActualizarEliminar"
        style="@style/botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonActualizarBorrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistro"
        app:layout_constraintVertical_bias="0.519" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="247dp"
        android:layout_height="216dp"
        app:layout_constraintBottom_toTopOf="@+id/botonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_supervised_user_circle_24" />

    <Button
        android:id="@+id/ajustes"
        style="@style/botones"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="Ajustes"
        android:drawableLeft="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toTopOf="@+id/botonActualizarEliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistro" />
</androidx.constraintlayout.widget.ConstraintLayout>